<resources>
    <string name="app_name">Demo02App</string>

    <!-- url -->
    <string name="url_login">http://192.168.1.107:8080/login</string>
    <string name="url_register">http://192.168.1.107:8080/register</string>
    <string name="url_address_book">http://192.168.1.107:8080/address_book</string>
    <string name="url_address_book_id">http://192.168.1.107:8080/addess_book_id</string>
    <string name="url_meeting">http://192.168.1.107:8080/meeting</string>
    <string name="url_meeting_publish">http://192.168.1.107:8080/meeting_publish</string>
    <string name="url_meeting_delete">http://192.168.1.107:8080/meeting_delete</string>
    <string name="url_notice">http://192.168.1.107:8080/notice</string>
    <string name="url_notice_publish">http://192.168.1.107:8080/notice_publish</string>
    <string name="url_notice_delete">http://192.168.1.107:8080/notice_delete</string>

    <string name="url_webSocket">ws://192.168.1.107:8080/websocket/</string>

    <!--  shared preference  -->
    <string name="pref_login_key">preference_login</string>

    <!--用户ID-->
    <string name="pref_user_id">pref_user_id</string>
    <!-- 用户名 -->
    <string name="pref_username">pref_username</string>
    <!-- 密码 -->
    <string name="pref_password">pref_password</string>
    <!-- 注销 -->
    <string name="pref_logout">pref_logout</string>
    <!-- 记住密码 -->
    <string name="pref_remember_me">pref_remember_me</string>
    <!-- token -->
    <string name="pref_token">pref_token</string>
    <!-- permissions -->
    <string name="pref_identity">prf_identity</string>
    <!--    <string name="pref_logout">logout</string>-->
    <!-- 头像 -->
    <string name="pref_profile_pic">pre_profile_pic</string>

    <!-- bundle params keys-->
    <string name="bundle_name">bundle_data</string>
    <string name="bundle_username">bundle_username</string>
    <string name="bundle_password">bundle_password</string>
    <string name="bundle_message_from">bundle_message_from</string>
    <string name="bundle_user_other">bundle_user_other</string>

    <!-- params keys-->
    <string name="param_user_id">u_id</string>
    <string name="param_username">u_username</string>
    <string name="param_phone">u_phone</string>
    <string name="param_password">u_password</string>
    <string name="param_real_name">u_real_name</string>
    <string name="param_identity">u_identity</string>
    <string name="param_user_host">ab_host</string>
    <string name="param_user_other">ab_other</string>
    <string name="param_remark">ab_remark</string>

    <string name="param_meeting_id">m_id</string>
    <string name="param_meeting_title">m_title</string>
    <string name="param_meeting_address">m_address</string>
    <string name="param_meeting_publisher">m_publisher</string>
    <string name="param_meeting_start_time">m_start_time</string>
    <string name="param_meeting_end_time">m_end_time</string>
    <string name="param_meeting_publish_time">m_publish_time</string>
    <string name="param_meeting_user_host">m_publish_user_host</string>

    <string name="param_notice_id">n_id</string>
    <string name="param_notice_publisher">n_publisher</string>
    <string name="param_notice_title">n_title</string>
    <string name="param_notice_content">n_content</string>
    <string name="param_notice_publish_time">n_publish_time</string>

    <!-- ui -->
    <string name="ui_login_id">电话号码</string>
    <string name="ui_password">密码</string>
    <string name="ui_remember_me">记住密码</string>
    <string name="ui_login">登录</string>
    <string name="ui_logout">退出登录</string>
    <string name="ui_register">注册</string>
    <string name="ui_message">消息</string>
    <string name="ui_meeting">会议</string>
    <string name="ui_notice">公告</string>
    <string name="ui_mine">我的</string>

    <string name="ui_nickname">昵称</string>
    <string name="ui_last_message">最近的一条消息</string>
    <string name="hint_publisher">发布者</string>
    <string name="hint_date">2020-01-01</string>

    <string name="ui_username_invalid">用户名格式不正确</string>
    <string name="ui_password_invalid">密码必须不少于六位</string>
    <string name="ui_login_failed">登录失败</string>
    <string name="ui_phone_invalid">电话号码格式不正确</string>
    <string name="ui_register_succeed">注册成功</string>
    <string name="ui_register_failed">注册失败</string>

    <string name="ui_publish_failed">发布失败</string>

    <!-- action -->
    <string name="action_webSocket">android.intent.action.CHAT_RECEIVER</string>

    <!--text-->
    <string name="long_text">这是一段长文字。这是一段长文字。这是一段长文字。</string>
    <string name="test_time">
        2020/01/02 18:39
    </string>

    <string name="large_text">
        这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，
        这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，
        这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，
        这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，这是一段长文字，
    </string>

    <string name="hint_time1">18:00</string>
    <string name="hint_time2">18:30</string>
    <string name="hint_time_range">18:00–18:30</string>
    <string name="hint_title">会议主题</string>
    <string name="hint_address">1号楼2F201</string>
    <string name="ui_schedule">日程</string>
    <string name="ui_log">日志</string>
    <string name="ui_file">文件</string>
    <string name="hint_phone">手机号码</string>
    <string name="ui_phone">手机号码</string>
    <string name="ui_email">邮箱</string>
    <string name="ui_setting">设置</string>
    <string name="ui_function">功能</string>

    <string name="dialog_message_logout">是否退出登录？</string>
    <string name="dialog_positive">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ui_address_book">联系人</string>
    <string name="ui_identity">身份</string>
    <string name="select_register_identity">选择要注册的身份</string>
    <string name="ui_register_employee">注册为员工</string>
    <string name="ui_register_admin">注册为管理员</string>
    <string name="ui_real_name">姓名</string>
    <string name="ui_position">职位</string>
    <string name="ui_remark">备注</string>
    <string name="ui_chat">聊天</string>
    <string name="ui_register_navigation">还没有账号？注册一个</string>
    <string name="ui_login_navigation">已经有账号？登录</string>
    <string name="ui_register_null">注册信息为空</string>
    <string name="ui_name_invalid">姓名格式不正确</string>
    <string name="ui_send">发送</string>
    <string name="ui_publish">发布</string>
    <string name="ui_meeting_publish">发布会议</string>
    <string name="ui_address">地址</string>
    <string name="ui_start_time">开始时间</string>
    <string name="ui_publisher">发布者</string>
    <string name="ui_end_time">结束时间</string>
    <string name="ui_publish_time">发布时间</string>

    <string name="ui_no_such_data">暂无数据</string>
    <string name="ui_meeting_title">会议主题</string>
    <string name="ui_meeting_address">会议地址</string>

    <string name="param_result">result</string>
    <string name="param_data">data</string>

    <string name="ui_title_invalid">标题尚未填写</string>
    <string name="ui_content_invalid">内容尚未填写</string>
    <string name="ui_address_invalid">地址尚未填写</string>
    <string name="ui_start_time_invalid">开始时间尚未选择</string>
    <string name="ui_end_time_invalid">结束时间尚未选择</string>
    <string name="ui_delete">删除</string>
    <string name="ui_positive">确定</string>
    <string name="ui_cancel">取消</string>
    <string name="ui_start_after_end_time">结束时间不应当早于开始时间</string>
    <string name="ui_user_info">用户信息</string>
    <string name="ui_publish_notice">发布公告</string>
    <string name="ui_notice_title">公告标题</string>
    <string name="ui_notice_content">公告内容</string>
    <string name="ui_save">保存</string>
    <string name="ui_input">输入内容</string>


</resources>