<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.demo02app.login.data.model.LoggedInUser" />

        <variable
            name="loginUserViewModel"
            type="com.example.demo02app.login.ui.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/ui_login_id"
            android:inputType="textEmailAddress"
            android:text="@={loginUserViewModel.loggedInUserLiveData.username}" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_username"
            android:layout_margin="10dp"
            android:hint="@string/ui_password"
            android:inputType="textPassword"
            android:text="@={loginUserViewModel.loggedInUserLiveData.password}" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:text="@string/ui_login" />
    </RelativeLayout>
</layout>