<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.example.demo02app.util.converter.DateTimeConverter" />

        <variable
            name="meetingItem"
            type="com.example.demo02app.model.meeting.data.model.MeetingItem" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/light_gray"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@mipmap/meeting" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/iv"
            android:hint="@string/hint_address"
            android:text="@{meetingItem.address}"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@{DateTimeConverter.toHourAndMinute(meetingItem.beginTime)+'-'+DateTimeConverter.toHourAndMinute(meetingItem.endTime)}"
            android:hint="@string/hint_time_range"
            android:textSize="18sp" />

<!--            android:text="@{meetingItem.beginTime+'-'+meetingItem.endTime}"-->

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_address"
            android:layout_toEndOf="@+id/iv"
            android:hint="@string/hint_title"
            android:text="@{meetingItem.title}"
            android:textSize="15sp" />

    </RelativeLayout>
</layout>