<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".model.mine.identity.IdentityConfigFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/select_register_identity"
                android:textSize="20sp" />

            <com.example.demo02app.util.view.TextDrawable
                android:id="@+id/td_register_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/light_gray"
                android:drawableTop="@mipmap/employee"
                android:padding="20dp"
                android:text="@string/ui_register_employee"
                android:textAlignment="center"
                app:drawable_height="64dp"
                app:drawable_width="64dp" />

            <com.example.demo02app.util.view.TextDrawable
                android:id="@+id/td_register_admin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/light_gray"
                android:drawableTop="@mipmap/admin"
                android:padding="20dp"
                android:text="@string/ui_register_admin"
                android:textAlignment="center"
                app:drawable_height="64dp"
                app:drawable_width="64dp" />

        </LinearLayout>
    </FrameLayout>
</layout>