<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="com.example.demo02app.util.converter.DateTimeConverter" />

        <variable
            name="noticeItem"
            type="com.example.demo02app.model.notice.data.model.NoticeItem" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/light_gray">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp"
            android:src="@mipmap/notice" />

        <TextView
            android:id="@+id/tv_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_toStartOf="@+id/tv_publish_time"
            android:layout_toEndOf="@+id/iv"
            android:hint="@string/hint_publisher"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@{noticeItem.publisher}"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_publish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:hint="@string/hint_date"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@{DateTimeConverter.convertToString(noticeItem.publishTime)}"
            android:textAlignment="viewEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv"
            android:layout_margin="5dp"
            android:ellipsize="end"
            android:hint="@string/large_text"
            android:maxLines="5"
            android:minLines="2"
            android:padding="10dp"
            android:text="@{noticeItem.content}"
            android:textAlignment="textStart"
            android:textSize="18sp" />

    </RelativeLayout>
</layout>